# codeworld

./: .gitignore  basebuild.sh  build.sh  install_staged.sh  log  removeHasCallStack.sh  run.sh
codeworld-api/src/: CodeWorld.hs
codeworld-api/src/CodeWorld/: Driver.hs  Picture.hs
codeworld-base/: codeworld-base.cabal
codeworld-base/src/: Core.hs  Extras.hs  Parameter.hs  Prelude.hs  Standard.hs
codeworld-base/src/Extras/: Animation.hs  Colors.hs  Cw.hs  Do.hs  Extras.hs  Game.hs  Geometry.hs  Lessons.hs  Op.hs  Queue.hs  SimUL1.hs  SnapBlock.hs  Stamp.hs  Turtle.hs  Util.hs  Widget.hs
codeworld-base/src/Extras/Dataframe/: Counties.hs  EnglishWords.hs
codeworld-base/src/Extras/Game/: Hanoi.hs
codeworld-base/src/Extras/SnapBlock/: Tangram.hs
codeworld-base/src/Internal/: CodeWorld.hs  Color.hs  Exports.hs  Num.hs  Picture.hs  Prelude.hs  Util.hs
codeworld-base/src/Lessons/: Bear.hs  Logic.hs  Operators.hs  Penguin.hs
codeworld-base/src/Standard/: Debug.hs  Pipes.hs
codeworld-compiler/src/CodeWorld/: Compile.hs
codeworld-compiler/src/CodeWorld/Compile/: Stages.hs
codeworld-compiler/test/testcases/magicImport_noParse/: source.hs
codeworld-server/src/: Util.hs
web/: clientId.txt-old  env.html
web/js/: codeworld.js  codeworld_shared.js
